<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="344dp"
    android:layout_height="597dp"
    android:background="@drawable/white_card_view"
    android:padding="40dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/monsterImage"
        android:layout_width="190dp"
        android:layout_height="183dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@color/gray"/>

    <TextView
        android:id="@+id/expected_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/expected_distance"
        android:textSize="20dp"
        android:textColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsterImage" />

    <TextView
        android:id="@+id/expected_kilometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/temp_km"
        android:textColor="@color/dark_blue"
        android:textSize="35dp"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expected_distance" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/dialog_notice"
        android:textSize="20dp"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@+id/giveup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expected_kilometer"
        app:layout_constraintVertical_bias="0.649" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/giveup"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:background="@drawable/white_round_view_with_shadow"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/giveup"
        android:textColor="@color/dialog_btn_text"
        android:textSize="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/move"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/move"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_round_view_with_shadow"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/move"
        android:textColor="@color/dialog_btn_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>