<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="17.5dp"
    android:paddingVertical="30dp"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/white_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <io.github.sceneview.SceneView
        android:id="@+id/monster_3d"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <TextView
        android:id="@+id/monset_get_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/get"
        android:textColor="@color/dark_gray"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline"
        app:layout_constraintVertical_bias="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/distance"
        android:textColor="@color/dialog_btn_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/monset_get_text"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/dialog_btn_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/monset_get_text"
        app:layout_constraintVertical_bias="0.094" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_home"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/white_round_view_with_shadow"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/go_home_fragment"
        android:textColor="@color/dialog_btn_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/monset_get_text"
        app:layout_constraintVertical_bias="0.635" />

</androidx.constraintlayout.widget.ConstraintLayout>