<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunningTimeActivity">

<!--    <TextView-->
<!--        android:id="@+id/test"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="text"-->
<!--        android:textSize="30dp"-->
<!--        android:textColor="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:src="@drawable/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123"
        app:tint="@color/dark_blue" />

    <TextView
        android:id="@+id/time_round_view"
        android:layout_width="164dp"
        android:layout_height="93dp"
        android:layout_marginTop="17.667dp"
        android:background="@drawable/sky_blue_round_view_with_shadow"
        android:fontFamily="@font/inter_regular"
        android:gravity="bottom|center"
        android:paddingBottom="17dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/concert_one_regular"
        android:text="@string/init_time"
        android:textColor="@color/white"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/time_round_view"
        app:layout_constraintEnd_toEndOf="@+id/time_round_view"
        app:layout_constraintStart_toStartOf="@+id/time_round_view"
        app:layout_constraintTop_toTopOf="@+id/time_round_view"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/kilometer_round_view"
        android:layout_width="264dp"
        android:layout_height="108dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/sky_blue_round_view_with_shadow"
        android:fontFamily="@font/inter_bold"
        android:gravity="bottom|center"
        android:paddingBottom="17dp"
        android:text="@string/kilometer"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_round_view" />

    <TextView
        android:id="@+id/kilometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:elevation="5dp"
        android:fontFamily="@font/concert_one_regular"
        android:shadowColor="@color/dark_blue"
        android:shadowRadius="18.0"
        android:text="@string/init_kilometer"
        android:textColor="@color/white"
        android:textSize="93dp"
        app:layout_constraintBottom_toBottomOf="@+id/kilometer_round_view"
        app:layout_constraintEnd_toEndOf="@+id/kilometer_round_view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/kilometer_round_view" />

    <ImageButton
        android:id="@+id/pause_btn"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/pause"
        app:layout_constraintBottom_toTopOf="@id/timer_animate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilometer_round_view"
        app:layout_constraintVertical_bias="0.75" />

    <ImageButton
        android:id="@+id/start_btn"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginStart="15dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/start"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/timer_animate"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/kilometer_round_view"
        app:layout_constraintVertical_bias="0.75"
        />

    <ImageButton
        android:id="@+id/stop_btn"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/stop"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/timer_animate"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/kilometer_round_view"
        app:layout_constraintVertical_bias="0.75"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/timer_animate"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kilometer_round_view"
        app:layout_constraintVertical_bias="1.0"
        app:lottie_autoPlay="true"
        app:lottie_fileName="timer_animate.json"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>